Updated and added public file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/homepage.css">
-  <link rel="stylesheet" href="styles/navbar.css">
+  <link rel="stylesheet" href="public/styles/homepage.css">
+  <link rel="stylesheet" href="public/styles/navbar.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>     
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>  
@@ -16,8 +16,8 @@
 <body>
   <!-- Navgation section  -->
   <div class="header">
-    <a href="homepage.html" class="brand">
-      <img src="images/logo_small.png" >
+    <a href="index.html" class="brand">
+      <img src="public/images/logo_small.png" >
     </a>
 
     <nav class="js-navbar">
